<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MemoSnap</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="title_activity_note">NoteActivity</string>
    <string name="title_activity_audio">AudioActivity</string>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="title_activity_social">SocialActivity</string>
    <string name="title_activity_entry_view">EntryViewActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_profile_settings">ProfileSettingsActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btnCancel">CANCEL</string>
    <string name="btnSave">SAVE</string>
    <string name="btnWall">WALL</string>
    <string name="btnShared">SHARED</string>
    <string name="btnFriends">FRIENDS</string>
    <string name="action_history">History</string>
    <string name="action_social">Social</string>
    <string name="action_home">Home</string>
    <string name="snap_name">Snap Name:</string>
    <string name="enter_snap_name">snap name</string>
    <string name="add_tag_name">HashTags:</string>
    <string name="tag_name">tag name</string>
    <string name="button_save">SAVE</string>
    <string name="button_cancel">CANCEL</string>
    <string name="facebook_app_id">963221427044591</string>
    <string name="action_profile">Profile</string>
    <string name="twitter_consumer_key">oZaBeW1bwebaiUhnpgaZsIaYJ</string>
    <string name="twitter_consumer_secret">xHEvfwbWKFNg3SwJeGoml5FWnN2GCAroZXzEC5ZludIsR5Xrxs</string>
    <string name="parse_app_id">WC76yAqiBZXoFmCAo39Oxe79nsC0WXznE0jd54uJ</string>
    <string name="parse_client_key">7UMienIoaNfR5sjkAj6X8NuOE0fAYxXhVvOT7ztY</string>
    <string name="profile_logo_content_description">Logo</string>
    <string name="profile_title_logged_in">Logged In!</string>
    <string name="profile_logout_button_label">Log Out</string>
    <string name="profile_title_logged_out">Must log in to view your profile</string>
    <string name="profile_login_button_label">Log in</string>
    <string name="title_activity_after_login">AfterLoginActivity</string>
    <string name="login">login</string>
    <string name="button_share">SHARE</string>
    <string name="type">Type:</string>
    <string name="date">Date:</string>
    <string name="btnContinue">CONTINUE</string>
    <string name="button_map">MAP</string>
    <string name="save_play">PLAY RECORDING</string>
    <string name="audioTime">00:00:00</string>
    <string name="email">email</string>
    <string name="profile_photo_discrip">Profile Photo:</string>
    <string name="update_pro_pic">CHANGE</string>
    <string name="profile_username_title">Username:</string>
    <string name="profile_username_hint">username</string>
    <string name="profile_name_title">Name:</string>
    <string name="profile_name_hint">First Last</string>
    <string name="profile_email_title">Email:</string>
    <string name="profile_email_hint">email</string>
    <string name="delete">DELETE</string>
    <string name="unshare">UNSHARE</string>

    <string-array name="my_facebook_permissions">
        <item>public_profile</item>
        <item>user_friends</item>
    </string-array>
    <string-array name="snap_type_array">
        <item>Images</item>
        <item>Notes</item>
        <item>Audio</item>
    </string-array>

    <string name="title_activity_shared">SharedActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hashtags">hash tags</string>
    <string name="comment">Comment</string>
    <string name="button_view_comments">VIEW COMMENTS</string>
    <string name="numLikes">0 likes</string>
    <string name="action_refresh">refresh</string>
    <string name="add_friends">Add Friends</string>

</resources>
